TripadvisorInnerCard scraper finished with sentiment analysis for ratings/comments + database minor change on tripadvisorinnercard table + fix on tripadvisor and idealista scrapers when making inserts into the database due to cards duplicates + TripadvisorInnerCard API ready to use, plus added to API Documentation + Place distance algorithm base on coordinates almost done + devsapi first documentation steps
